# traceowl

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  pinecone-integration.yml  qdrant-integration.yml  release.yml  s3-integration.yml
crates/traceowl-diff/: Cargo.toml
crates/traceowl-diff/src/: basic_diff.rs  cli.rs  events.rs  input.rs  join.rs  lib.rs  main.rs  normalize.rs  output.rs
crates/traceowl-diff/tests/: end_to_end.rs
crates/traceowl-diff/tests/fixtures/: baseline.jsonl  candidate.jsonl
crates/traceowl-proxy/: Cargo.toml  Dockerfile
crates/traceowl-proxy/src/: config.rs  control.rs  events.rs  lib.rs  main.rs  proxy.rs  queue.rs  sink.rs  uploader.rs
crates/traceowl-proxy/src/backend/: hashing.rs  mod.rs  pinecone.rs  qdrant.rs
crates/traceowl-proxy/tests/: control_api.rs  integration.rs  pinecone_integration.rs  qdrant_integration.rs  s3_integration.rs  s3_sink.rs
crates/traceowl-schema/: Cargo.toml
crates/traceowl-schema/src/: event_v1.rs  lib.rs
docs/: architecture.md  install.md  operate.md
scripts/: stress_test.py
scripts/demo/: baseline_profile.json  build_demo_collections.py  candidate_profile.json  demo.py
src/: config.rs  error.rs  events.rs  health.rs  lib.rs  main.rs  proxy.rs  sampling.rs  shutdown.rs  sink.rs
src/backend/: mod.rs  qdrant.rs
tests/: integration.rs  qdrant_integration.rs
